--- a/templates/login.html
+++ b/templates/login.html
@@ -35,7 +35,7 @@
 
                 <div class="text-center">
                     <p class="mb-1">New to the system?</p>
-                    <a href="{{ url_for('create') }}" class="btn btn-outline-success btn-sm w-100">Register New Account</a>
+                    <a href="{{ url_for('create_user') }}" class="btn btn-outline-success btn-sm w-100">Register New Account</a>
                 </div>
 
                 <div class="text-center mt-3">
