--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - Lost & Found</title>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-light">
@@ -28,6 +29,11 @@
                         <label class="form-label">Password</label>
                         <input type="password" name="password" class="form-control" required>
                     </div>
+                    <div class="mb-3 text-center">
+                        <div class="h-captcha"
+                             data-sitekey="{{ config.HCAPTCHA_SITE_KEY }}">
+                        </div>
+                    </div>  
                     <button type="submit" class="btn btn-primary w-100">Sign In</button>
                 </form>
 
